# SpeakerVoiceIdentifier

./: .gitignore  CMakeLists.txt  README.md  SpeakerIdCpp.cbp  SpeakerIdCpp.sln  SpeakerIdCpp.vcxproj  gmm.cpp  gmm.h  main.cpp  mfcc.cpp  mfcc.h
model/: 0.gmm  1.gmm  2.gmm  3.gmm  4.gmm  5.gmm  6.gmm  7.gmm  8.gmm  9.gmm
